--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <main class="w-full min-h-screen" id="app"></main>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
